# plugin-responder

./: CMakeLists.txt  README.md
discordpp/: plugin-responder.hh
